--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "start": "parcel index.html --open"
+    "start": "parcel *.html --open",
+    "build": "parcel build *.html --public-url ./"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "sass": "^1.26.3"
   }
 }
